better makefile, cpp11

--- a/approvals/Makefile
+++ b/approvals/Makefile
@@ -3,7 +3,7 @@
 ###################################
 CC = g++
 INCLUDE = -I ../igloo
-CFLAGS = -lpthread -Wall
+CFLAGS = -lpthread -Wall -std=c++14
 CHECK = echo cppcheck -v --inline-suppr --enable=all
 FORMAT = echo astyle -YfDHUbps4yj -k3
 
@@ -50,46 +50,46 @@ FileApproverTests: test/FileApproverTests.cpp reporters/Reporter.h FileApprover.
 Approvals.gch: Approvals.h
 	$(FORMAT) Approvals.h
 	$(CHECK) Approvals.h
-	$(CC) $(INCLUDE) -c Approvals.h -O3 -Wall
+	$(CC) $(INCLUDE) -c Approvals.h -O3 -Wall $(CFLAGS)
 
 ApprovalException.h: ApprovalException.gch
 
 ApprovalException.gch:
 	$(FORMAT) ApprovalException.h
 	$(CHECK) ApprovalException.h
-	g++ -c ApprovalException.h -O3 -Wall
+	$(CC) -c ApprovalException.h -O3 -Wall $(CFLAGS)
 
 CommandLauncher.h: reporters/CommandLauncher.h
 	$(FORMAT) reporters/CommandLauncher.h
 	$(CHECK) reporters/CommandLauncher.h
-	g++ -c reporters/CommandLauncher.h -O3 -Wall
+	$(CC) -c reporters/CommandLauncher.h -O3 -Wall $(CFLAGS)
 
 FileApprover.h: FileApprover.gch ApprovalException.h
 
 FileApprover.gch:
 	$(FORMAT) FileApprover.h
 	$(CHECK) FileApprover.h
-	g++ $(INCLUDE) -c FileApprover.h -O3 -Wall
+	$(CC) $(INCLUDE) -c FileApprover.h -O3 -Wall $(CFLAGS)
 
 Reporter.h: reporters/Reporter.h reporters/CommandLauncher.h
 	$(FORMAT) reporters/Reporter.h
 	$(CHECK) reporters/Reporter.h
-	g++ -c reporters/Reporter.h -O3 -Wall
+	$(CC)  -c reporters/Reporter.h -O3 -Wall $(CFLAGS)
 
 Namer.h: namers/Namer.h
 	$(FORMAT) namers/Namer.h
 	$(CHECK) namers/Namer.h
-	g++ $(INCLUDE) -c namers/Namer.h -O3 -Wall
+	$(CC)  $(INCLUDE) -c namers/Namer.h -O3 -Wall $(CFLAGS)
 
 IglooNamerFactory.h: namers/IglooNamerFactory.h Namer.h
 	$(FORMAT) namers/IglooNamerFactory.h
 	$(CHECK) --suppress=unmatchedSuppression namers/IglooNamerFactory.h
-	$(CC) $(INCLUDE) -c namers/IglooNamerFactory.h -O3 -Wall
+	$(CC) $(INCLUDE) -c namers/IglooNamerFactory.h -O3 -Wall $(CFLAGS)
 
 StringWriter.h:
 	$(FORMAT) StringWriter.h
 	$(CHECK) StringWriter.h
-	g++ -c StringWriter.h -O3 -Wall
+	$(CC)  -c StringWriter.h -O3 -Wall $(CFLAGS)
 
 format:
 	astyle -YfDHUbps4yj -k3 $(SRCS)
