--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(CatchPlayground)
+project(ApprovalTests.cpp)
 
 set(CMAKE_CXX_STANDARD 17)
 include_directories(lib)
