--- a/ApprovalTests/CMakeLists.txt
+++ b/ApprovalTests/CMakeLists.txt
@@ -11,5 +11,5 @@ set(SOURCE_FILES
         StringWriter.h
         namers/ApprovalNamer.h
         reporters/CommandLauncher.h
-        reporters/Reporter.h reporters/FirstWorkingReporter.h reporters/DiffReporter.h)
+        reporters/Reporter.h reporters/FirstWorkingReporter.h reporters/DiffReporter.h reporters/DiffPrograms.h reporters/DiffInfo.h)
 add_library(ApprovalTests ${SOURCE_FILES} )
