Works on Windows w/ @claremacrae

--- a/ApprovalTests/CMakeLists.txt
+++ b/ApprovalTests/CMakeLists.txt
@@ -6,11 +6,15 @@ set(SOURCE_FILES
         ApprovalTests.h
         Catch2Approvals.h
         FileApprover.h
-        FileUtils.h
         Macros.h
         StringWriter.h
+        SystemUtils.h
         namers/ApprovalNamer.h
         reporters/CommandLauncher.h
-        reporters/Reporter.h reporters/FirstWorkingReporter.h reporters/DiffReporter.h reporters/DiffPrograms.h reporters/DiffInfo.h)
+        reporters/Reporter.h 
+        reporters/FirstWorkingReporter.h
+        reporters/DiffReporter.h
+        reporters/DiffPrograms.h
+        reporters/DiffInfo.h)
 add_library(ApprovalTests ${SOURCE_FILES} )
 set_target_properties(ApprovalTests PROPERTIES LINKER_LANGUAGE CXX)
