enabling test for travis w/@jaybazuzi

--- a/ApprovalTests_Catch2_Tests/CMakeLists.txt
+++ b/ApprovalTests_Catch2_Tests/CMakeLists.txt
@@ -11,3 +11,4 @@ set(SOURCE_FILES
         ApprovalsTests.cpp
         )
 add_executable(ApprovalTests_Catch2_Tests ${SOURCE_FILES} )
+add_test(NAME ApprovalTests_Catch2_Tests COMMAND ApprovalTests_Catch2_Tests)
