--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(ApprovalTests.cpp)
 
 set(CMAKE_CXX_STANDARD 17)
 include_directories(lib)
+enable_testing()
 
 add_subdirectory(ApprovalTests)
 add_subdirectory(ApprovalTests_Catch2_Tests)
