--- a/ApprovalTests/CMakeLists.txt
+++ b/ApprovalTests/CMakeLists.txt
@@ -18,6 +18,6 @@ set(SOURCE_FILES
         reporters/DiffInfo.h
         reporters/WindowsReporters.h
         reporters/MacReporters.h
-        reporters/LinuxReporters.h StringUtils.h reporters/GenericDiffReporter.h)
+        reporters/LinuxReporters.h StringUtils.h reporters/GenericDiffReporter.h reporters/CommandReporter.h)
 add_library(ApprovalTests ${SOURCE_FILES} )
 set_target_properties(ApprovalTests PROPERTIES LINKER_LANGUAGE CXX)
