--- a/ApprovalTests_Catch2_Tests/CMakeLists.txt
+++ b/ApprovalTests_Catch2_Tests/CMakeLists.txt
@@ -10,6 +10,7 @@ set(SOURCE_FILES
         FileApproverTests.cpp
         ApprovalsTests.cpp
         VectorTests.cpp
+        CombinationTests.cpp
         )
 add_executable(ApprovalTests_Catch2_Tests ${SOURCE_FILES} )
 add_test(NAME ApprovalTests_Catch2_Tests COMMAND ApprovalTests_Catch2_Tests)
