Added Google Test support
@isidore

--- a/ApprovalTests/CMakeLists.txt
+++ b/ApprovalTests/CMakeLists.txt
@@ -20,6 +20,8 @@ set(SOURCE_FILES
         reporters/DiffInfo.h
         reporters/WindowsReporters.h
         reporters/MacReporters.h
-        reporters/LinuxReporters.h StringUtils.h reporters/GenericDiffReporter.h reporters/CommandReporter.h OkraApprovals.h)
+        reporters/LinuxReporters.h StringUtils.h reporters/GenericDiffReporter.h reporters/CommandReporter.h OkraApprovals.h
+        GoogleTestApprovals.h
+        )
 add_library(ApprovalTests ${SOURCE_FILES} )
 set_target_properties(ApprovalTests PROPERTIES LINKER_LANGUAGE CXX)
