Test naming of Google Test
Co-Authored-By: Llewellyn Falco <isidore@users.noreply.github.com>

--- a/ApprovalTests_GoogleTest_Tests/CMakeLists.txt
+++ b/ApprovalTests_GoogleTest_Tests/CMakeLists.txt
@@ -4,6 +4,7 @@ set(CMAKE_CXX_STANDARD 11)
 set(SOURCE_FILES
         main.cpp
         GoogleTestApprovalsTests.cpp
+		GoogleNamerTest.cpp
         )
 
 if(MSVC)
