Fix hard-coded Gtest path for Travis
Co-Authored-By: Llewellyn Falco <isidore@users.noreply.github.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,10 @@ add_subdirectory(ApprovalTests_Catch2_Tests)
 
 # We need at least Google Test 1.8, as that is the first version where
 # TestInfo provides the path to the source file of tests being run
-set(GTEST_ROOT "C:/Users/Clare/Documents/Programming/tools/gtest/gtest-1.8.0")
-set(GTEST_INCLUDE_DIR "C:/Users/Clare/Documents/Programming/tools/gtest/gtest-1.8.0/include")
-set(GTEST_LIBRARY "C:/Users/Clare/Documents/Programming/tools/gtest/gtest-1.8.0/msvc/gtest/Debug/gtest.lib")
-set(GTEST_MAIN_LIBRARY "C:/Users/Clare/Documents/Programming/tools/gtest/gtest-1.8.0/msvc/gtest/Debug/gtest_main.lib")
+#set(GTEST_ROOT "C:/Users/Clare/Documents/Programming/tools/gtest/gtest-1.8.0")
+#set(GTEST_INCLUDE_DIR "C:/Users/Clare/Documents/Programming/tools/gtest/gtest-1.8.0/include")
+#set(GTEST_LIBRARY "C:/Users/Clare/Documents/Programming/tools/gtest/gtest-1.8.0/msvc/gtest/Debug/gtest.lib")
+#set(GTEST_MAIN_LIBRARY "C:/Users/Clare/Documents/Programming/tools/gtest/gtest-1.8.0/msvc/gtest/Debug/gtest_main.lib")
 find_package(GTest 1.8)
 if(GTEST_FOUND)
     message("Google Test found in ${GTEST_INCLUDE_DIRS}")
