--- a/ApprovalTests_Catch2_Tests/CMakeLists.txt
+++ b/ApprovalTests_Catch2_Tests/CMakeLists.txt
@@ -11,6 +11,7 @@ set(SOURCE_FILES
         ApprovalsTests.cpp
         VectorTests.cpp
         CombinationTests.cpp
+        StringUtilsTests.cpp
         )
 add_executable(ApprovalTests_Catch2_Tests ${SOURCE_FILES} )
 add_test(NAME ApprovalTests_Catch2_Tests COMMAND ApprovalTests_Catch2_Tests)
