--- a/ApprovalTests_Catch2_Tests/CMakeLists.txt
+++ b/ApprovalTests_Catch2_Tests/CMakeLists.txt
@@ -12,6 +12,7 @@ set(SOURCE_FILES
         VectorTests.cpp
         CombinationTests.cpp
         StringUtilsTests.cpp
+        SystemUtilsTests.cpp
         )
 add_executable(ApprovalTests_Catch2_Tests ${SOURCE_FILES} )
 add_test(NAME ApprovalTests_Catch2_Tests COMMAND ApprovalTests_Catch2_Tests)
