Confirming it also works with Catch1
Co-Authored-By: Phil Nash <github@philnash.me>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ include_directories(lib)
 enable_testing()
 
 add_subdirectory(ApprovalTests)
+add_subdirectory(ApprovalTests_Catch1_Tests)
 add_subdirectory(ApprovalTests_Catch2_Tests)
 
 
