t Google test working again
Co-Authored-By: Llewellyn Falco <isidore@users.noreply.github.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,13 +8,15 @@ add_subdirectory(ApprovalTests)
 add_subdirectory(ApprovalTests_Catch1_Tests)
 add_subdirectory(ApprovalTests_Catch2_Tests)
 
+add_subdirectory(lib/googletest-release-1.8.1)
 
 # We need at least Google Test 1.8, as that is the first version where
 # TestInfo provides the path to the source file of tests being run
-#set(GTEST_ROOT "C:/Users/Clare/Documents/Programming/tools/gtest/gtest-1.8.0")
-#set(GTEST_INCLUDE_DIR "C:/Users/Clare/Documents/Programming/tools/gtest/gtest-1.8.0/include")
-#set(GTEST_LIBRARY "C:/Users/Clare/Documents/Programming/tools/gtest/gtest-1.8.0/msvc/gtest/Debug/gtest.lib")
-#set(GTEST_MAIN_LIBRARY "C:/Users/Clare/Documents/Programming/tools/gtest/gtest-1.8.0/msvc/gtest/Debug/gtest_main.lib")
+set(GTEST_ROOT "D:/Users/Clare/Documents/Programming/github/ApprovalTests.cpp/lib/googletest-release-1.8.1")
+set(GTEST_INCLUDE_DIR "D:/Users/Clare/Documents/Programming/github/ApprovalTests.cpp/lib/googletest-release-1.8.1/googletest/include")
+set(GTEST_LIBRARY "D:/Users/Clare/Documents/Programming/github/ApprovalTests.cpp/cmake-build-debug/lib/googletest-release-1.8.1/googlemock/gtest/libgtestd.a")
+set(GTEST_MAIN_LIBRARY "D:/Users/Clare/Documents/Programming/github/ApprovalTests.cpp/cmake-build-debug/lib/googletest-release-1.8.1/googlemock/gtest/libgtest_maind.a")
+set(GTEST_ROOT "cmake-build-debug/lib/googletest-release-1.8.1")
 find_package(GTest 1.8)
 if(GTEST_FOUND)
     message("Google Test found in ${GTEST_INCLUDE_DIRS}")
