ApprovalTests_GoogleTest_Tests now uses local googltest build
This fixes the problem that configure and build
needed to be run twice in order to get
a sucessful build of ApprovalTests_GoogleTest_Tests

--- a/ApprovalTests_GoogleTest_Tests/CMakeLists.txt
+++ b/ApprovalTests_GoogleTest_Tests/CMakeLists.txt
@@ -17,4 +17,4 @@ endif()
 add_executable(${PROJECT_NAME} ${SOURCE_FILES} )
 
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
-target_link_libraries(${PROJECT_NAME} GTest::GTest GTest::Main)
+target_link_libraries(${PROJECT_NAME} gtest gtest_main)
