t Added ostream example

--- a/ApprovalTests_Catch2_Tests/CMakeLists.txt
+++ b/ApprovalTests_Catch2_Tests/CMakeLists.txt
@@ -13,6 +13,7 @@ set(SOURCE_FILES
         CombinationTests.cpp
         StringUtilsTests.cpp
         SystemUtilsTests.cpp
+        ToStringExample.cpp
         )
 add_executable(ApprovalTests_Catch2_Tests ${SOURCE_FILES} )
 add_test(NAME ApprovalTests_Catch2_Tests COMMAND ApprovalTests_Catch2_Tests)
