--- a/ApprovalTests_Catch2_Tests/CMakeLists.txt
+++ b/ApprovalTests_Catch2_Tests/CMakeLists.txt
@@ -15,5 +15,5 @@ set(SOURCE_FILES
         SystemUtilsTests.cpp
         ToStringExample.cpp
         )
-add_executable(ApprovalTests_Catch2_Tests ${SOURCE_FILES} )
-add_test(NAME ApprovalTests_Catch2_Tests COMMAND ApprovalTests_Catch2_Tests)
+add_executable(${PROJECT_NAME} ${SOURCE_FILES} )
+add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
