--- a/ApprovalTests/CMakeLists.txt
+++ b/ApprovalTests/CMakeLists.txt
@@ -12,6 +12,8 @@ set(SOURCE_FILES
         StringWriter.h
         SystemUtils.h
         CombinationApprovals.h
+        comparers/ApprovalComparer.h
+        comparers/TextFileComparer.h
         namers/ApprovalNamer.h
         namers/ApprovalTestNamer.h
         reporters/CommandLauncher.h
