d Added style guide
Co-Authored-By: Llewellyn Falco <isidore@users.noreply.github.com>

--- a/ApprovalTests_Catch2_Tests/CMakeLists.txt
+++ b/ApprovalTests_Catch2_Tests/CMakeLists.txt
@@ -14,6 +14,7 @@ set(SOURCE_FILES
         StringUtilsTests.cpp
         SystemUtilsTests.cpp
         ToStringExample.cpp
+        StyleGuide.h
         )
 add_executable(${PROJECT_NAME} ${SOURCE_FILES} )
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
