Make library usable with Cmake add_subdirectory() of source tree.
Downstream users would do the following:

1. add_subdirectory(ApprovalTests.cpp/ApprovalTests)
2. target_link_libraries(my_project ApprovalTests)

And then in sources they would include as

3. #include <ApprovalTests/Approvals.h>

This is a common pattern. The tests are modified to use this pattern.

--- a/ApprovalTests_Catch2_Tests/CMakeLists.txt
+++ b/ApprovalTests_Catch2_Tests/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.8)
 project(ApprovalTests_Catch2_Tests)
 set(CMAKE_CXX_STANDARD 17)
-set(SOURCE_FILES
+add_executable(${PROJECT_NAME}
         main.cpp
         reporters/ReporterTests.cpp
         ApprovalExceptionTests.cpp
@@ -16,5 +16,5 @@ set(SOURCE_FILES
         ToStringExample.cpp
         StyleGuide.h
         )
-add_executable(${PROJECT_NAME} ${SOURCE_FILES} )
+target_link_libraries(${PROJECT_NAME} ApprovalTests)
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
