--- a/ApprovalTests_Catch1_Tests/CMakeLists.txt
+++ b/ApprovalTests_Catch1_Tests/CMakeLists.txt
@@ -1,9 +1,8 @@
 cmake_minimum_required(VERSION 3.8)
 project(ApprovalTests_Catch1_Tests)
 set(CMAKE_CXX_STANDARD 17)
-set(SOURCE_FILES
+add_executable(${PROJECT_NAME}
         main.cpp
-        ApprovalsTests.cpp
-        )
-add_executable(${PROJECT_NAME} ${SOURCE_FILES} )
+        ApprovalsTests.cpp)
+target_link_libraries(${PROJECT_NAME} ApprovalTests)
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
