t Added ToString examples
Co-Authored-By: Llewellyn Falco <isidore@users.noreply.github.com>

--- a/ApprovalTests_Catch2_Tests/CMakeLists.txt
+++ b/ApprovalTests_Catch2_Tests/CMakeLists.txt
@@ -14,6 +14,7 @@ add_executable(${PROJECT_NAME}
         StringUtilsTests.cpp
         SystemUtilsTests.cpp
         ToStringExample.cpp
+        ToStringTemplateExample.cpp
         StyleGuide.h
         )
 target_link_libraries(${PROJECT_NAME} ApprovalTests)
