d Documentation improvements for ToString
Co-Authored-By: Llewellyn Falco <isidore@users.noreply.github.com>

--- a/ApprovalTests_Catch2_Tests/CMakeLists.txt
+++ b/ApprovalTests_Catch2_Tests/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(${PROJECT_NAME}
         SystemUtilsTests.cpp
         ToStringExample.cpp
         ToStringTemplateExample.cpp
+        ToStringWrapperExample.cpp
         StyleGuide.h
         )
 target_link_libraries(${PROJECT_NAME} ApprovalTests)
