d Add example program to demo adding to existing google test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,4 +32,5 @@ if (NOT_SUBPROJECT)
     add_subdirectory(ApprovalTests_Catch1_Tests)
     add_subdirectory(ApprovalTests_Catch2_Tests)
     add_subdirectory(ApprovalTests_GoogleTest_Tests)
+    add_subdirectory(examples)
 endif()
