F Introduce Blocker interface so BlockingReporter is more flexible
Co-Authored-By: Llewellyn Falco <isidore@users.noreply.github.com>

--- a/ApprovalTests_Catch2_Tests/CMakeLists.txt
+++ b/ApprovalTests_Catch2_Tests/CMakeLists.txt
@@ -23,6 +23,7 @@ add_executable(${PROJECT_NAME}
         reporters/TestReporter.h
         reporters/ReporterTests.cpp
         utilities/MachineBlockerTests.cpp
+        reporters/BlockingReporterTests.cpp
         )
 target_link_libraries(${PROJECT_NAME} ApprovalTests)
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
