--- a/ApprovalTests_Catch2_Tests/CMakeLists.txt
+++ b/ApprovalTests_Catch2_Tests/CMakeLists.txt
@@ -27,3 +27,22 @@ add_executable(${PROJECT_NAME}
         )
 target_link_libraries(${PROJECT_NAME} ApprovalTests)
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
+
+#if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+#    target_compile_options(${PROJECT_NAME} PRIVATE
+#        -Wall
+#        -Wextra
+#        -Wpedantic
+#        -Werror
+#        -Wno-unused-parameter
+#        -Wno-unused-variable
+#        )
+#elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+#    target_compile_options(${PROJECT_NAME} PRIVATE
+#        /W4
+#        /WX
+#        /wd4100 # unreferenced formal parameter
+#        /wd4244 # conversion from 'int' to 'char', possible loss of data
+#        /wd2220 # warning treated as error - no 'object' file generated
+#        )
+#endif()
