e Simplify manual enabling of compiler checks in local builds #9

--- a/ApprovalTests_Catch2_Tests/CMakeLists.txt
+++ b/ApprovalTests_Catch2_Tests/CMakeLists.txt
@@ -28,7 +28,7 @@ add_executable(${PROJECT_NAME}
 target_link_libraries(${PROJECT_NAME} ApprovalTests)
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
 
-#if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
 #    target_compile_options(${PROJECT_NAME} PRIVATE
 #        -Wall
 #        -Wextra
@@ -37,7 +37,7 @@ add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
 #        -Wno-unused-parameter
 #        -Wno-unused-variable
 #        )
-#elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
 #    target_compile_options(${PROJECT_NAME} PRIVATE
 #        /W4
 #        /WX
@@ -45,4 +45,4 @@ add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
 #        /wd4244 # conversion from 'int' to 'char', possible loss of data
 #        /wd2220 # warning treated as error - no 'object' file generated
 #        )
-#endif()
+endif()
