--- a/ApprovalTests_Catch2_Tests/CMakeLists.txt
+++ b/ApprovalTests_Catch2_Tests/CMakeLists.txt
@@ -29,14 +29,12 @@ target_link_libraries(${PROJECT_NAME} ApprovalTests)
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
 
 if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
-#    target_compile_options(${PROJECT_NAME} PRIVATE
-#        -Wall
-#        -Wextra
-#        -Wpedantic
-#        -Werror
-#        -Wno-unused-parameter
-#        -Wno-unused-variable
-#        )
+    target_compile_options(${PROJECT_NAME} PRIVATE
+        -Wall
+        -Wextra
+        -Wpedantic
+        -Werror
+        )
 elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
 #    target_compile_options(${PROJECT_NAME} PRIVATE
 #        /W4
