--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,5 +32,6 @@ if (NOT_SUBPROJECT)
     add_subdirectory(ApprovalTests_Catch1_Tests)
     add_subdirectory(ApprovalTests_Catch2_Tests)
     add_subdirectory(ApprovalTests_GoogleTest_Tests)
+    add_subdirectory(ApprovalTests_DocTest_Tests)
     add_subdirectory(examples)
 endif()
