--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,13 @@ dist: trusty
 
 language: cpp
 
+addons: &g++5
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-5
+
 addons: &g++6
   apt:
     sources:
@@ -10,10 +17,23 @@ addons: &g++6
     packages:
       - g++-6
 
+addons: &g++7
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-7
+
 matrix:
   include:
+    - env: GCC_VERSION=5
+      addons: *g++5
+
     - env: GCC_VERSION=6
       addons: *g++6
+
+    - env: GCC_VERSION=7
+      addons: *g++7
 
 script:
   - mkdir .build
