--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,20 @@ addons: &gcc7
     packages:
       - g++-7
 
+addons: &gcc8
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-8
+
+addons: &gcc9
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-9
+
 matrix:
   include:
     - env: GCC_VERSION=5
@@ -34,6 +48,12 @@ matrix:
 
     - env: GCC_VERSION=7
       addons: *gcc7
+
+    - env: GCC_VERSION=8
+      addons: *gcc8
+
+    - env: GCC_VERSION=9
+      addons: *gcc9
 
 script:
   - mkdir .build
