--- a/.travis.yml
+++ b/.travis.yml
@@ -47,23 +47,24 @@ addons: &gcc9
 
 matrix:
   include:
-    - env: GCC_VERSION=4.8
-      addons: *gcc48
+    # See https://github.com/approvals/ApprovalTests.cpp/issues/13 for fixing this build
+    # - env: GCC_VERSION=4.8
+    #   addons: *gcc48
 
-#    - env: GCC_VERSION=5
-#      addons: *gcc5
-#
-#    - env: GCC_VERSION=6
-#      addons: *gcc6
-#
-#    - env: GCC_VERSION=7
-#      addons: *gcc7
-#
-#    - env: GCC_VERSION=8
-#      addons: *gcc8
-#
-#    - env: GCC_VERSION=9
-#      addons: *gcc9
+    - env: GCC_VERSION=5
+      addons: *gcc5
+
+    - env: GCC_VERSION=6
+      addons: *gcc6
+
+    - env: GCC_VERSION=7
+      addons: *gcc7
+
+    - env: GCC_VERSION=8
+      addons: *gcc8
+
+    - env: GCC_VERSION=9
+      addons: *gcc9
 
 script:
   - mkdir .build
