--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+# # Adapted from various sources, including:
+# - https://github.com/gabime/spdlog
+
 sudo: required
 dist: trusty
 
@@ -45,6 +48,14 @@ addons: &gcc9
     packages:
       - g++-9
 
+addons: &clang6
+  apt:
+    packages:
+      - clang-6.0
+    sources:
+      - ubuntu-toolchain-r-test
+      - llvm-toolchain-trusty-6.0
+
 matrix:
   include:
     # See https://github.com/approvals/ApprovalTests.cpp/issues/13 for fixing this build
@@ -66,9 +77,20 @@ matrix:
     - env: GCC_VERSION=9
       addons: *gcc9
 
+    - env: CLANG_VERSION=6.0
+      addons: *clang6
+
+before_script:
+  - if [ -n "$GCC_VERSION" ]; then export CXX="g++-${GCC_VERSION}" CC="gcc-${GCC_VERSION}"; fi
+  - if [ -n "$CLANG_VERSION" ]; then export CXX="clang++-${CLANG_VERSION}" CC="clang-${CLANG_VERSION}"; fi
+  - which $CXX
+  - which $CC
+  - $CXX --version
+  - cmake --version
+
 script:
   - mkdir .build
   - cd .build
-  - cmake -DCMAKE_CXX_COMPILER=g++-${GCC_VERSION} ..
+  - cmake ..
   - cmake --build .
   - ctest --verbose
