--- a/.travis.yml
+++ b/.travis.yml
@@ -63,20 +63,20 @@ matrix:
     # - env: GCC_VERSION=4.8
     #   addons: *gcc48
 
-    - env: GCC_VERSION=5
-      addons: *gcc5
-
-    - env: GCC_VERSION=6
-      addons: *gcc6
-
-    - env: GCC_VERSION=7
-      addons: *gcc7
-
-    - env: GCC_VERSION=8
-      addons: *gcc8
-
-    - env: GCC_VERSION=9
-      addons: *gcc9
+#    - env: GCC_VERSION=5
+#      addons: *gcc5
+#
+#    - env: GCC_VERSION=6
+#      addons: *gcc6
+#
+#    - env: GCC_VERSION=7
+#      addons: *gcc7
+#
+#    - env: GCC_VERSION=8
+#      addons: *gcc8
+#
+#    - env: GCC_VERSION=9
+#      addons: *gcc9
 
     - env: CLANG_VERSION=6.0
       addons: *clang6
