--- a/.travis.yml
+++ b/.travis.yml
@@ -48,6 +48,15 @@ addons: &gcc9
     packages:
       - g++-9
 
+addons: &clang5
+  apt:
+    packages:
+      - clang-5.0
+      - libstdc++-6-dev
+    sources:
+      - ubuntu-toolchain-r-test
+      - llvm-toolchain-trusty-6.0
+
 addons: &clang6
   apt:
     packages:
@@ -78,8 +87,12 @@ matrix:
 #    - env: GCC_VERSION=9
 #      addons: *gcc9
 
-    - env: CLANG_VERSION=6.0
-      addons: *clang6
+    - env: CLANG_VERSION=5.0
+      addons: *clang5
+
+    # Fails to build: https://travis-ci.com/claremacrae/ApprovalTests.cpp/builds/118773112
+    # - env: CLANG_VERSION=6.0
+    #   addons: *clang6
 
 before_script:
   - if [ -n "$GCC_VERSION" ]; then export CXX="g++-${GCC_VERSION}" CC="gcc-${GCC_VERSION}"; fi
