e Turn off email notifications for now

--- a/.travis.yml
+++ b/.travis.yml
@@ -108,3 +108,7 @@ script:
   - cmake ..
   - cmake --build .
   - ctest --verbose
+
+# DO NOT MERGE this to parent project
+notifications:
+  email: false
