--- a/.travis.yml
+++ b/.travis.yml
@@ -91,8 +91,8 @@ matrix:
       addons: *clang5
 
     # Fails to build: https://travis-ci.com/claremacrae/ApprovalTests.cpp/builds/118773112
-    # - env: CLANG_VERSION=6.0
-    #   addons: *clang6
+    - env: CLANG_VERSION=6.0
+      addons: *clang6
 
 before_script:
   - if [ -n "$GCC_VERSION" ]; then export CXX="g++-${GCC_VERSION}" CC="gcc-${GCC_VERSION}"; fi
