--- a/.travis.yml
+++ b/.travis.yml
@@ -107,8 +107,8 @@ before_script:
 script:
   - mkdir .build
   - cd .build
-  - cmake --verbose ..
-  - cmake --verbose --build .
+  - cmake ..
+  - cmake --build .
   - ctest --verbose
 
 # DO NOT MERGE this to parent project
