Revert "e Try removing libstdc++ from list of packages to fix clang linux builds"
This reverts commit 3cc9a4561c354c329adbc6c7d42056f825a26cf8.

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,7 @@ addons: &clang5
   apt:
     packages:
       - clang-5.0
-      # - libstdc++-6-dev
+      - libstdc++-6-dev
     sources:
       - ubuntu-toolchain-r-test
       - llvm-toolchain-trusty-5.0
@@ -63,7 +63,7 @@ addons: &clang6
   apt:
     packages:
       - clang-6.0
-      # - libstdc++-6-dev
+      - libstdc++-6-dev
     sources:
       - ubuntu-toolchain-r-test
       - llvm-toolchain-trusty-6.0
