--- a/.travis.yml
+++ b/.travis.yml
@@ -101,9 +101,12 @@ matrix:
       os: linux
       addons: *clang6
 
+    - os: osx
+
 before_script:
   - if [ -n "$GCC_VERSION" ]; then export CXX="g++-${GCC_VERSION}" CC="gcc-${GCC_VERSION}"; fi
   - if [ -n "$CLANG_VERSION" ]; then export CXX="clang++-${CLANG_VERSION}" CC="clang-${CLANG_VERSION}"; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export CXX="clang++" CC="clang"; fi
   - which $CXX
   - which $CC
   - $CXX --version
