--- a/.travis.yml
+++ b/.travis.yml
@@ -103,6 +103,9 @@ matrix:
 
     - os: osx
 
+  exclude:
+    - os: linux
+
 before_script:
   - if [ -n "$GCC_VERSION" ]; then export CXX="g++-${GCC_VERSION}" CC="gcc-${GCC_VERSION}"; fi
   - if [ -n "$CLANG_VERSION" ]; then export CXX="clang++-${CLANG_VERSION}" CC="clang-${CLANG_VERSION}"; fi
