--- a/.travis.yml
+++ b/.travis.yml
@@ -72,34 +72,34 @@ matrix:
     # - env: GCC_VERSION=4.8
     #   addons: *gcc48
 
-    - env: GCC_VERSION=5
-      os: linux
-      addons: *gcc5
-
-    - env: GCC_VERSION=6
-      os: linux
-      addons: *gcc6
-
-    - env: GCC_VERSION=7
-      os: linux
-      addons: *gcc7
-
-    - env: GCC_VERSION=8
-      os: linux
-      addons: *gcc8
-
-    - env: GCC_VERSION=9
-      os: linux
-      addons: *gcc9
-
-    - env: CLANG_VERSION=5.0
-      os: linux
-      addons: *clang5
-
-    # Fails to build: https://travis-ci.com/claremacrae/ApprovalTests.cpp/builds/118773112
-    - env: CLANG_VERSION=6.0
-      os: linux
-      addons: *clang6
+#    - env: GCC_VERSION=5
+#      os: linux
+#      addons: *gcc5
+#
+#    - env: GCC_VERSION=6
+#      os: linux
+#      addons: *gcc6
+#
+#    - env: GCC_VERSION=7
+#      os: linux
+#      addons: *gcc7
+#
+#    - env: GCC_VERSION=8
+#      os: linux
+#      addons: *gcc8
+#
+#    - env: GCC_VERSION=9
+#      os: linux
+#      addons: *gcc9
+#
+#    - env: CLANG_VERSION=5.0
+#      os: linux
+#      addons: *clang5
+#
+#    # Fails to build: https://travis-ci.com/claremacrae/ApprovalTests.cpp/builds/118773112
+#    - env: CLANG_VERSION=6.0
+#      os: linux
+#      addons: *clang6
 
     - os: osx
 
