e Re-enable email notifications

--- a/.travis.yml
+++ b/.travis.yml
@@ -127,6 +127,5 @@ script:
   - cmake --build .
   - ctest --verbose
 
-# DO NOT MERGE this to parent project
 notifications:
-  email: false
+  email: true
