e Tidy up a comment

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-# # Adapted from various sources, including:
+# Adapted from various sources, including:
 # - https://github.com/gabime/spdlog
 
 sudo: required
