--- a/.travis.yml
+++ b/.travis.yml
@@ -72,44 +72,44 @@ matrix:
     # - env: GCC_VERSION=4.8
     #   addons: *gcc48
 
-    - env: GCC_VERSION=5
-      os: linux
-      addons: *gcc5
-
-    - env: GCC_VERSION=6
-      os: linux
-      addons: *gcc6
-
-    - env: GCC_VERSION=7
-      os: linux
-      addons: *gcc7
-
-    - env: GCC_VERSION=8
-      os: linux
-      addons: *gcc8
-
-    - env: GCC_VERSION=9
-      os: linux
-      addons: *gcc9
-
-#    # Fails to build: https://travis-ci.com/claremacrae/ApprovalTests.cpp/jobs/215192844
-#    - env: CLANG_VERSION=5.0
+#    - env: GCC_VERSION=5
 #      os: linux
-#      addons: *clang5
+#      addons: *gcc5
 #
-#    # Fails to build: https://travis-ci.com/claremacrae/ApprovalTests.cpp/jobs/215192846
-#    - env: CLANG_VERSION=6.0
+#    - env: GCC_VERSION=6
 #      os: linux
-#      addons: *clang6
+#      addons: *gcc6
+#
+#    - env: GCC_VERSION=7
+#      os: linux
+#      addons: *gcc7
+#
+#    - env: GCC_VERSION=8
+#      os: linux
+#      addons: *gcc8
+#
+#    - env: GCC_VERSION=9
+#      os: linux
+#      addons: *gcc9
 
-    - os: osx
-      osx_image: xcode8.3
+    # Fails to build: https://travis-ci.com/claremacrae/ApprovalTests.cpp/jobs/215192844
+    - env: CLANG_VERSION=5.0
+      os: linux
+      addons: *clang5
 
-    - os: osx
-      osx_image: xcode9.4
+    # Fails to build: https://travis-ci.com/claremacrae/ApprovalTests.cpp/jobs/215192846
+    - env: CLANG_VERSION=6.0
+      os: linux
+      addons: *clang6
 
-    - os: osx
-      osx_image: xcode10.2
+#    - os: osx
+#      osx_image: xcode8.3
+#
+#    - os: osx
+#      osx_image: xcode9.4
+#
+#    - os: osx
+#      osx_image: xcode10.2
 
 before_script:
   - if [ -n "$GCC_VERSION" ]; then export CXX="g++-${GCC_VERSION}" CC="gcc-${GCC_VERSION}"; fi
