--- a/.travis.yml
+++ b/.travis.yml
@@ -72,25 +72,25 @@ matrix:
     # - env: GCC_VERSION=4.8
     #   addons: *gcc48
 
-#    - env: GCC_VERSION=5
-#      os: linux
-#      addons: *gcc5
-#
-#    - env: GCC_VERSION=6
-#      os: linux
-#      addons: *gcc6
-#
-#    - env: GCC_VERSION=7
-#      os: linux
-#      addons: *gcc7
-#
-#    - env: GCC_VERSION=8
-#      os: linux
-#      addons: *gcc8
-#
-#    - env: GCC_VERSION=9
-#      os: linux
-#      addons: *gcc9
+    - env: GCC_VERSION=5
+      os: linux
+      addons: *gcc5
+
+    - env: GCC_VERSION=6
+      os: linux
+      addons: *gcc6
+
+    - env: GCC_VERSION=7
+      os: linux
+      addons: *gcc7
+
+    - env: GCC_VERSION=8
+      os: linux
+      addons: *gcc8
+
+    - env: GCC_VERSION=9
+      os: linux
+      addons: *gcc9
 
     - env: CLANG_VERSION=5.0
       os: linux
@@ -100,14 +100,14 @@ matrix:
       os: linux
       addons: *clang6
 
-#    - os: osx
-#      osx_image: xcode8.3
-#
-#    - os: osx
-#      osx_image: xcode9.4
-#
-#    - os: osx
-#      osx_image: xcode10.2
+    - os: osx
+      osx_image: xcode8.3
+
+    - os: osx
+      osx_image: xcode9.4
+
+    - os: osx
+      osx_image: xcode10.2
 
 before_script:
   - if [ -n "$GCC_VERSION" ]; then export CXX="g++-${GCC_VERSION}" CC="gcc-${GCC_VERSION}"; fi
