e Add comments to make structure clearer

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@
 sudo: required
 language: cpp
 
+# -------------------------------------------------------------------------
+# Linux gcc
+# -------------------------------------------------------------------------
+
 addons: &gcc48
   apt:
     sources:
@@ -46,6 +50,10 @@ addons: &gcc9
     packages:
       - g++-9
 
+# -------------------------------------------------------------------------
+# Linux clang
+# -------------------------------------------------------------------------
+
 addons: &clang5
   compiler: clang
   apt:
@@ -68,6 +76,11 @@ addons: &clang6
 
 matrix:
   include:
+    
+    # -------------------------------------------------------------------------
+    # Linux gcc
+    # -------------------------------------------------------------------------
+
     # See https://github.com/approvals/ApprovalTests.cpp/issues/13 for fixing this build
     # - env: GCC_VERSION=4.8
     #   addons: *gcc48
@@ -92,6 +105,10 @@ matrix:
       os: linux
       addons: *gcc9
 
+    # -------------------------------------------------------------------------
+    # Linux clang
+    # -------------------------------------------------------------------------
+
     - env: CLANG_VERSION=5.0
       os: linux
       addons: *clang5
@@ -99,6 +116,10 @@ matrix:
     - env: CLANG_VERSION=6.0
       os: linux
       addons: *clang6
+
+    # -------------------------------------------------------------------------
+    # Mac clang
+    # -------------------------------------------------------------------------
 
     - os: osx
       osx_image: xcode8.3
