e Clang5 and 6 on linux need trusty, not xenial

--- a/.travis.yml
+++ b/.travis.yml
@@ -100,10 +100,12 @@ matrix:
 
     - env: CLANG_VERSION=5.0
       os: linux
+      dist: trusty
       addons: *clang5
 
     - env: CLANG_VERSION=6.0
       os: linux
+      dist: trusty
       addons: *clang6
 
     # -------------------------------------------------------------------------
