e Prevent Travis building more_appveyor_builds branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@
 sudo: required
 language: cpp
 
+branches:
+  except:
+    - more_appveyor_builds
+
 # -------------------------------------------------------------------------
 # Linux gcc
 # -------------------------------------------------------------------------
