--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,8 @@
 image: Visual Studio 2017
 
-branches:
-  except:
-    - more_travis_builds
+#branches:
+#  except:
+#    - more_travis_builds
 
 before_build:
 - cmd: cmake .
