--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,8 +7,8 @@ image: Visual Studio 2017
 before_build:
 - cmd: cmake .
 
-build:
-  project: ApprovalTests.cpp.sln
+build_script:
+- cmd: cmake --build .
 
 test_script:
 - cmd: ctest --verbose --parallel 4 -C Debug
