--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,11 +1,23 @@
-image: Visual Studio 2017
+environment:
+  matrix:
+    - TARGET: vs2015
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+      GENERATOR: '"Visual Studio 14 2015"'
+
+    - TARGET: vs2017
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+      GENERATOR: '"Visual Studio 15 2017"'
+
+    - TARGET: vs2019
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+      GENERATOR: '"Visual Studio 16 2019"'
 
 #branches:
 #  except:
 #    - more_travis_builds
 
 before_build:
-- cmd: cmake .
+- cmd: cmake -G %GENERATOR% .
 
 build_script:
 - cmd: cmake --build .
